--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://marsella8.github.io/"
 languageCode = "en-us"
 title = "Pietro's Notes"
 theme = "smol"
